fixed string overflow issues

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -16,6 +16,7 @@ body {
     flex: 1 1 auto;
     flex-direction: column;
     align-items: stretch;
+    word-wrap: break-word;
 }
 
 br {
@@ -388,9 +389,14 @@ body > #bloghome .entries {
     transform: translateX(25px);
 }
 
-body > #bloghome .entries .containers {
+.entries .containers {
+    width: calc(90%);
+    max-width: calc(90%);
     z-index: 0;
     transform: translateX(-25px);
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    word-break: break-all;
 }
 
 @media (max-width: 800px) {
